// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="mb-5"
>
  <span
    className="flex flex-col "
  >
    <label
      className="text-gray text-[11px]"
      htmlFor=""
    >
      foo
    </label>
    Foo
  </span>
</div>
`;

exports[`should render an input 1`] = `
<div
  className="mb-5"
>
  <span
    className="flex flex-col "
  >
    <label
      className="text-gray text-[11px]"
      htmlFor=""
    >
      foo
    </label>
    <input
      className="flex flex-1 "
    />
  </span>
</div>
`;

exports[`should render an invalid input 1`] = `
<div
  className="mb-5"
>
  <span
    className="flex flex-col "
  >
    <label
      className="text-gray text-[11px]"
      htmlFor=""
    >
      foo
    </label>
    <input
      className="flex flex-1 p-invalid"
      error="error"
      touched={true}
    />
  </span>
</div>
`;
